objects/Clinical_Trial_Profile__c.object
<CustomObject>
    <description>All clinical trial details which exist at clinicaltrials.gov, with additional metadata describing the inclusion / exclusion criteria, and identification of which clinical trials are awarded to QuintilesIMS</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age Criteria</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Age Criteria</inlineHelpText>
        <label>Age</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Summary__c</fullName>
        <description>Summary of Title</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Brief Summary&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Brief Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chart_Review__c</fullName>
        <inlineHelpText>HCP/Physician Chart Review Amount</inlineHelpText>
        <label>Chart Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClinicalTrials_gov_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the URL of the study within clinicaltrials.gov. It should end at the NCT ID and not have any additional search parameters suffixed.</inlineHelpText>
        <label>ClinicalTrials.gov URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Co_morbidity__c</fullName>
        <description>Other conditions &amp; diseases that the patient currently has</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Other conditions &amp; diseases that the patient currently has</inlineHelpText>
        <label>Co-morbidity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_s_Therapeutic_Area__c</fullName>
        <description>Therapeutic Area</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Condition&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Condition(s) Therapeutic Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_for_Below_Amounts__c</fullName>
        <label>Currency for Below Amounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographic__c</fullName>
        <description>Demographics of patient profile</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Demographics of patient profile</inlineHelpText>
        <label>Demographic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Study Detail Description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Detailed Description&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <description>ICD-9 and 10 codes or may just list diagnosis</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ICD-9 and 10 codes or may just list diagnosis</inlineHelpText>
        <label>Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Criteria__c</fullName>
        <description>Examples include Demographic, Age, Gender, Medication History, Formulary, Diagnosis, Co-morbidity, ICD 9/10 Code, etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Examples include Demographic, Age, Gender, Medication History, Formulary, Diagnosis, Co-morbidity, ICD 9/10 Code, etc.</inlineHelpText>
        <label>Eligibility Criteria</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enrolled_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrolled End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Actual__c</fullName>
        <inlineHelpText>Entered by SPNL when setting up Clinical Study obtained from the Clinical team. This should be updated at a regular cadence to identify if we need to continue to use CRCP for a study</inlineHelpText>
        <label>Enrollment Actual</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Target__c</fullName>
        <inlineHelpText>This field should map to the &quot;Estimated Enrollment&quot; field in clinicaltrials.gov.</inlineHelpText>
        <label>Enrollment Target</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>Estimated recruitment completion date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Estimated recruitment completion date.</inlineHelpText>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Enrollment__c</fullName>
        <description>Estimated number of participants in a clinical study.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Estimated number of participants in a clinical study.</inlineHelpText>
        <label>Estimated Enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Primary_Completion_Date__c</fullName>
        <description>Date Final data collection date for primary outcome measure.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Final data collection date for primary outcome measure.</inlineHelpText>
        <label>Estimated Primary Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formulary__c</fullName>
        <description>Formulary for the drug</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Formulary for the drug</inlineHelpText>
        <label>Formulary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Sexes Eligible for Study.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sexes Eligible for Study.</inlineHelpText>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCP_Contacted_Potential_Participant__c</fullName>
        <inlineHelpText>HCP/Physician HCP Contacted Potential Participant Amount</inlineHelpText>
        <label>HCP Contacted Potential Participant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Data_Monitoring_Committee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field should map to the &quot;Has Data Monitoring Committee&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Has Data Monitoring Committee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interventions__c</fullName>
        <description>A process or action that is the focus of a clinical study.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Intervention&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Interventions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lifestyle__c</fullName>
        <description>Smoking, alcohol, etc.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Smoking, alcohol, etc.</inlineHelpText>
        <label>Lifestyle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Medical_Record_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique URL generated by Survey Gizmo created by SPNL in collaboration with IQVIA Digital Media.  This field must be populated if the study requires medical record review.</inlineHelpText>
        <label>Link to Medical Record Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Pre_screening__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique URL generated by Survey Gizmo created by SPNL in collaboration with IQVIA Digital Media.  This field must be populated if the study requires pre-screening.</inlineHelpText>
        <label>Link to Pre-screening</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDM_Cluster_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM Cluster ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Prescreen_Log_CAP_per_PI__c</fullName>
        <label>Max Prescreen Log CAP per PI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Prescreen_Log_CAP_per_Study__c</fullName>
        <label>Max Prescreen Log CAP per Study</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Referral_CAP_Per_PI__c</fullName>
        <label>Max Referral CAP Per PI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Referral_CAP_Per_Study__c</fullName>
        <label>Max Referral CAP Per Study</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medication_History__c</fullName>
        <description>Patient medical history.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Patient medical history.</inlineHelpText>
        <label>Medication History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCT_Number__c</fullName>
        <description>A unique identification code given to each clinical study registered on ClinicalTrials.gov. The format is &quot;NCT&quot; followed by an 8-digit number</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A unique identification code given to each clinical study registered on ClinicalTrials.gov. The format is &quot;NCT&quot; followed by an 8-digit number</inlineHelpText>
        <label>NCT Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Official_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Official Title&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Official Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orientation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orientation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <inlineHelpText>HCP/Physician Orientation Amount</inlineHelpText>
        <label>Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If populated, this will be the description seen within the community by PIs, HCPs, Participants, etc. describing the clinical study.  This will &quot;override&quot; display of the &quot;Detailed Description&quot; if &quot;Override Description&quot; is populated.</inlineHelpText>
        <label>Override Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Exclusion_Criteria__c</fullName>
        <description>Friendly description of exclusion criteria for use in internal portal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Exclusion Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Inclusion_Criteria__c</fullName>
        <description>Friendly description for internal use</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Override Inclusion Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Recruitment_Status__c</fullName>
        <inlineHelpText>Ability for SPNL or Admins to override the recruiting status of a clinical study.</inlineHelpText>
        <label>Override Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actively Enrolling</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Enrollment Closed</fullName>
                </value>
                <value>
                    <fullName>No_Longer_Enrolling</fullName>
                    <label>No Longer Enrolling</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Status_Updated_By__c</fullName>
        <description>Populated via workflow rule when the Override Status field is changed.  Shows the profile of the user who changed the field. Validation created around who can change this field by profile.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Populated via workflow rule when the Override Status field is changed.</inlineHelpText>
        <label>Override Status Updated By</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_in_Digital_Recruitment__c</fullName>
        <label>Participating in Digital Recruitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participating_in_Rocket_Referral__c</fullName>
        <label>Participating in Rocket Referral</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Participating_in_Digital_Recruitment__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prescreen__c</fullName>
        <inlineHelpText>HCP/Physician Prescreen Amount</inlineHelpText>
        <label>Prescreen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prescreen_to_Referral_Ratio_CAP_per_HCP__c</fullName>
        <label>Prescreen to Referral Ratio CAP per HCP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protocol_ID__c</fullName>
        <description>QI assigned unique ID for a study</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Protocol ID = Protocol Number. This is a unique number assigned by the sponsor providing a standard way to identify the study.  Obtain the protocol number from the Project Lead, Clinical Lead, Patient Recruitment Lead, or Site and Patient Networks Lead.</inlineHelpText>
        <label>Protocol ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publications__c</fullName>
        <description>Published scientific articles or abstracts about a clinical study.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Publications&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Publications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Randomization__c</fullName>
        <label>Randomization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Status__c</fullName>
        <inlineHelpText>field populated from Data Factory</inlineHelpText>
        <label>CTMS Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed Follow Up / In Analysis</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Enrolling</fullName>
                </value>
                <value>
                    <fullName>Enrollment Closed</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Open to Enrollment</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Closed Follow-up / In Analysis</fullName>
                    <isActive>false</isActive>
                    <label>Closed Follow-up / In Analysis</label>
                </value>
                <value>
                    <fullName>Closed to Enrollment</fullName>
                    <isActive>false</isActive>
                    <label>Closed to Enrollment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Limit__c</fullName>
        <label>Referral Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <inlineHelpText>HCP/Physician Referral Amount</inlineHelpText>
        <label>Referral</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Responsible_Party_Organization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Responsible Party Organization</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <description>Party responsible for submitting information about a clinical study to clinicaltrials.gov and updating that information</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Party responsible for submitting information about a clinical study to clinicaltrials.gov and updating that information</inlineHelpText>
        <label>Responsible Party</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_URL__c</fullName>
        <formula>&apos;https://www.clinicalresearch.com/en/find-trials/Study-Detail?docid=&apos; + NCT_Number__c + &apos;&amp;c=&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Pays_for_Referral_Activity__c</fullName>
        <inlineHelpText>Sponsor Pays for Referral Activity</inlineHelpText>
        <label>Sponsor Pays for Referral Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_N_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_Arms__c</fullName>
        <description># of arms/cohorts in a study.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Study Arms&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Arms</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Design__c</fullName>
        <description>The investigative methods used in the clinical study</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Study Design&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Design</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Phase__c</fullName>
        <description>Current Phase of the Study</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Study Phase&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Phase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Study Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Study_Sponsor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Study Sponsor&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Sponsor</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Title__c</fullName>
        <description>Title of the Study</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Brief Title&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <description>Type of Study</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Study Type&quot; field in clinicaltrials.gov</inlineHelpText>
        <label>Study Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suppress_Participant_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, no emails will be sent to participants for this study.</inlineHelpText>
        <label>Suppress Participant Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surveys_supported_Languages__c</fullName>
        <label>Surveys Supported Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_And_Conditions_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms And Conditions</label>
        <referenceTo>Terms_And_Conditions__c</referenceTo>
        <relationshipLabel>Clinical Trial Profiles</relationshipLabel>
        <relationshipName>Clinical_Trial_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms and Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>US_FDA_Regulated_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US FDA Regulated Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field should map to the &quot;Verification Date&quot; field in clinicaltrials.gov.  If there is no day within clinicaltrials.gov, default the date to the 15th of the month.</inlineHelpText>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <label>Clinical Trial Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Study_Code_Name__c</columns>
        <columns>Study_Title__c</columns>
        <columns>NAME</columns>
        <columns>NCT_Number__c</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Participating_in_Digital_Recruitment__c</columns>
        <columns>Participating_in_Rocket_Referral__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enrolled_End_Date__c</columns>
        <columns>Enrollment_Start_Date__c</columns>
        <columns>Recruitment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Modified</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Study_Title__c</columns>
        <columns>NCT_Number__c</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Participating_in_Digital_Recruitment__c</columns>
        <columns>Participating_in_Rocket_Referral__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Participating_in_Digital_Recruitment__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Participating_in_Rocket_Referral__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Last Modified</label>
    </listViews>
    <listViews>
        <fullName>My_Clinical_Trial_Profiles</fullName>
        <columns>NAME</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Override_Recruitment_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assigned Trials</label>
    </listViews>
    <listViews>
        <fullName>Studies_About_to_Close</fullName>
        <columns>NAME</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Estimated_Completion_Date__c</columns>
        <columns>Override_Recruitment_Status__c</columns>
        <columns>Estimated_Enrollment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Trials by Estimated Completion Date</label>
    </listViews>
    <listViews>
        <fullName>Studies_by_Close_Date</fullName>
        <columns>NAME</columns>
        <columns>Protocol_ID__c</columns>
        <columns>Study_Title__c</columns>
        <columns>Estimated_Primary_Completion_Date__c</columns>
        <columns>Participating_in_Digital_Recruitment__c</columns>
        <columns>Participating_in_Rocket_Referral__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Participating_in_Rocket_Referral__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Rocket Referral Trial Statuses</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Clinical Trial Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Field_Updates_Integration</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNEW()&amp;&amp;   (($User.FirstName + &apos; &apos; +  $User.LastName)  == &apos;IQVIA Integrations&apos;) &amp;&amp; (ISCHANGED(Brief_Summary__c)||ISCHANGED(MDM_Cluster_ID__c)||ISCHANGED(Randomization__c)||ISCHANGED(Study_Sponsor__c)||ISCHANGED(Condition_s_Therapeutic_Area__c)||ISCHANGED(Detailed_Description__c)||ISCHANGED(Eligibility_Criteria__c)||ISCHANGED(Estimated_Enrollment__c)||ISCHANGED(Responsible_Party_Organization__c)||ISCHANGED(NCT_Number__c)||ISCHANGED(Protocol_ID__c)||ISCHANGED(Responsible_Party__c)||ISCHANGED(Study_Arms__c)||ISCHANGED(Study_Design__c)||ISCHANGED(Study_Phase__c)||ISCHANGED(Study_Title__c)||ISCHANGED(Study_Type__c)||ISCHANGED(Start_Date__c)||ISCHANGED(Official_Title__c)||ISCHANGED(Study_Source__c)||ISCHANGED(US_FDA_Regulated_Product__c)||ISCHANGED(Has_Data_Monitoring_Committee__c)||ISCHANGED(Verification_Date__c)||ISCHANGED(Estimated_Completion_Date__c)||ISCHANGED(Enrollment_Target__c)||ISCHANGED(Estimated_Primary_Completion_Date__c)||ISCHANGED(Enrollment_Actual__c)||ISCHANGED(Study_Code_Name__c))</errorConditionFormula>
        <errorMessage>Only Status Field can be changed by Integration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recruitment_Status</fullName>
        <active>true</active>
        <description>SPNL can only change the value from &apos;Actively Enrolled&apos; to &apos;On Hold</description>
        <errorConditionFormula>AND(ISCHANGED(Override_Recruitment_Status__c),
ISPICKVAL(PRIORVALUE(Override_Recruitment_Status__c),&quot;Actively Enrolling&quot;), 
ISPICKVAL(Override_Recruitment_Status__c, &quot;On Hold&quot;)= FALSE,

$Profile.Name= &quot;IQVIA SPNL&quot;)</errorConditionFormula>
        <errorMessage>SPNL can only change the value from &apos;Actively Enrolled&apos; to &apos;On Hold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_enrollment_trial_date</fullName>
        <active>false</active>
        <errorConditionFormula>Enrollment_Start_Date__c  &gt;  Enrolled_End_Date__c</errorConditionFormula>
        <errorMessage>Enrollment End Date can&apos;t happen before Enrolment Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_NCT_number</fullName>
        <active>false</active>
        <errorConditionFormula>OR(LEN(NCT_Number__c) &lt;&gt; 11,
NOT REGEX(NCT_Number__c, &quot;NCT\\d{8}&quot;))</errorConditionFormula>
        <errorDisplayField>NCT_Number__c</errorDisplayField>
        <errorMessage>NCT number should have a format &quot;NCT00000000&quot;</errorMessage>
    </validationRules>
</CustomObject>